--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "202211-todolist-js",
+  "name": "202211-todolist-js2",
   "version": "1.0.0",
   "description": "",
   "main": "index.html",
